crates/tui/tests/snapshots/views__collection-filtered-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers list   account Acme (1)   list Weekly
Email                                   Status                                  Subscribed
ada@example.com                         subscribed                              2026-01-01T00:00:00+00:00


































loaded 2  filter 1 of 2 loaded

q quit  Enter open  / filter loaded  Esc back  Ctrl-p palette
