crates/tui/tests/snapshots/views__collection-unavailable-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers list   account Acme (1)   list Weekly
Email                       Status                    Subscribed
GET /1.0/accounts/1/lists/7/subscribers — 403 your token may not read
subscribers



















q quit  Enter open  / filter loaded  Esc back  Ctrl-p palette
